2015-06-04  Gregory Soyez  <soyez@fastjet.fr>

	* MC_LHQG_EE.cc:
	revamped the analysis to
	. hardcode much less things
	. include log-scaled binned angulatrity histograms
	. include 3 values of R
	. added thrust (lin and log scales)
	. added total event multiplicity in 4 thrust bins

	* MC_LHQG_EE.plot:
	set the plots axes labels and title

	* README.md:
	added a few items concerning processes and setuops to run [+items
	for discussion]

	* MC_LHQG_EE.cc:                    *** ADDED ***
	Added a Rivet analysis for the ee studies
	It is mostly based on Deepak's MC_LHQG.cc analysis with a few
	fixes (see later entries above) and using directly FastJet to use
	ee anti-kt with the WTA axes.
	The code should automatically adjust the energy threshold for the
	jets to 0.4*Q.

2015-06-03  Gregory Soyez  <soyez@fastjet.fr>

	* Shapes.cc (fastjet_shapes):
	fixed typo in the switch to scalar pt

	* README.md:
	added a description of the first ee and pp studies to implement as
	Rivet routines

	* Shapes.{hh,cc}:
	added Jesse as an author of this

	* Shapes.{hh,cc}:         *** ADDED ***
	added a file containing basic shapes inplementation.
	So far only GeneralisedAngularity

	Shapes live in the fastjet_shapes namespace to reflect the fact
	that they are implemented a fastjet::FunctionOfPseudoJet<double>
	objects (defined as fastjet_shapes::Shape here)


